--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-theme: minimal-mistakes-jekyll
-
 title: Your awesome title
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -29,7 +27,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: minimal-mistakes-jekyll # minima
+minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
