--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@ theme                    : "minimal-mistakes-jekyll"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ko-KR"
-title                    : "끄적끄적"
+locale                   : "en-US"
+title                    : "Site Title"
 title_separator          : "-"
-name                     : "namsoo"
+name                     : "Your Name"
 description              : "An amazing website."
-url                      : "https://namsoo2.github.io"
+url                      : "https://namsoo2.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
